# pysighelp

./: README.md  core.py  daq.py  pyproject.toml  setup.py  visualization.py
pysighelp/: daq.py  filter.py  frf.py  io.py
