[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysighelp"
version = "0.1.0"
description = "Signal processing helper utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Marko Zupan", email = "marko.zupan@fs.uni-lj.si" }]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pickle"
]

[project.urls]
Homepage = "https://github.com/ZupanMarko/pysighelp"
